# aperture

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  justfile  manifest  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/skills/audit-route-contract/: SKILL.md
.claude/skills/beads/: SKILL.md
.claude/skills/clipboard/: SKILL.md
.claude/skills/codex-comms/: SKILL.md
agents/atlas/: manifest.json
agents/cipher/: manifest.json
agents/glados/: manifest.json  skills.txt
agents/izzy/: manifest.json
agents/peppy/: manifest.json  skills.txt
agents/planner/: manifest.json
agents/rex/: manifest.json
agents/sage/: manifest.json
agents/scout/: manifest.json  skills.txt
agents/sentinel/: manifest.json  skills.txt
agents/sterling/: manifest.json  skills.txt
agents/vance/: manifest.json  skills.txt
agents/wheatley/: manifest.json  skills.txt
docs/: MIGRATION-WEB-APERTURE.md  codex-beads-bridge.md
mcp-server/: package.json
mcp-server/src/: beads.ts  index.ts
prompts/: atlas.md  cipher.md  glados.md  izzy.md  peppy.md  planner.md  rex.md  sage.md  scout.md  sentinel.md  sterling.md  vance.md  wheatley.md
scripts/: playwright-mcp-mini.sh
skills/: setup.sh
src/: main.ts  style.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: agent_loader.rs  agents.rs  codex_harness.rs  config.rs  lib.rs  poller.rs  spawner.rs  state.rs  tmux.rs  warroom.rs
src/components/: AgentCard.ts  AgentConfigModal.ts  AgentList.ts  ChatPanel.ts  Footer.ts  Navbar.ts  Terminal.ts
src/services/: tauri-commands.ts
(+12 files in other folders)
